Robot design, preliminary test code

--- a/notebook/Untitled.ipynb
+++ b/notebook/Untitled.ipynb
@@ -12,8 +12,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b55b5e28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vc = cv2.VideoCapture(0)\n",
+    "\n",
+    "if vc.isOpened(): # try to get the first frame\n",
+    "    is_capturing, frame = vc.read()\n",
+    "    frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)    # makes the blues image look real colored\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5e6e3d5",
    "metadata": {},
    "outputs": [],
    "source": []
