--- a/notebook/Notebook.ipynb
+++ b/notebook/Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0e0995ff",
    "metadata": {},
    "outputs": [],
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "642c2a71",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3c7757f438d48c582d9cf63090a384f",
+       "model_id": "1361362c1a634143b2c360619b983785",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,31 +83,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "74d39349",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "b55b5e28",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vc = cv2.VideoCapture(0)\n",
-    "\n",
-    "if vc.isOpened(): # try to get the first frame\n",
-    "    is_capturing, frame = vc.read()\n",
-    "    frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)    # makes the blues image look real colored\n",
-    "    "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f7429deb",
    "metadata": {},
@@ -117,18 +92,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "22660320",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Carrier board is not from a Jetson Developer Kit.\n",
+      "WARNNIG: Jetson.GPIO library has not been verified with this carrier board,\n",
+      "WARNING: and in fact is unlikely to work correctly.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialising I2C Bus\n",
+      "Initialising ServoKit\n"
+     ]
+    }
+   ],
    "source": [
     "import codebase as base\n",
+    "#import vision\n",
     "\n",
     "# Camera\n",
-    "base.setupCamera()\n",
+    "#camera = vision.setupCamera()\n",
     "\n",
-    "# PWM Controller\n",
-    "base.setupI2C()\n",
+    "# Robot\n",
+    "robot = base.Robot(flipper_widget.value, \n",
+    "                   lower_hatch_widget.value, \n",
+    "                   upper_hatch_widget.value, \n",
+    "                   (motor_left_A_widget.value, motor_left_B_widget.value), \n",
+    "                   (motor_right_A_widget.value, motor_right_B_widget.value))\n",
     "\n",
     "# Real-time viewer\n",
     "base.startViewer() # Optional"
@@ -144,13 +142,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d5e6e3d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3 0\n",
+      "0 0\n",
+      "0 0\n"
+     ]
+    }
+   ],
    "source": [
+    "import time\n",
+    "#robot.testServo()\n",
+    "\n",
+    "robot.motorRight.move(0.3)\n",
+    "time.sleep(1)\n",
+    "robot.motorLeft.move(None)\n",
+    "robot.motorRight.move(None)\n",
+    "\n",
     "# 1. Wait for button press\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40a750cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -169,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
